--- a/prework-study-guide/index.html
+++ b/prework-study-guide/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/style.css">
     <title>Prework Study Guide</title>
   </head>
   <body>
@@ -12,7 +13,7 @@
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
     </header>
     <main>
-<<<<<<< HEAD
+
       <section class="card" id="html-section">
         <h2>HTML</h2>
         <ul>
@@ -29,7 +30,12 @@
       <section class="card" id="css-section">
         <h2>CSS</h2>
         <ul>
-            <li>Enter your CSS notes here</li>
+          <li>A margin indicates how much space we want around the outside of an element.</li>
+          <li>A padding indicates how much space we want around the content inside an element.</li>
+          <li>A class can have CSS styles by adding the class name as the selector, and adding a period before the name.  </li>
+          <li>We can apply a CSS rule to more than one selectors by separating them each with a comma</li>
+          <li> Using * as a selector, indicates you are going to apply the style to all the elements visible on the page</li>
+          <li> To link a stylesheet to a HTML document, add [link rel='stylesheet' href='./pathtothestylesheet/style.css'> to the html [head></head></li>
        </ul>
       </section>
    
@@ -53,8 +59,7 @@
             <li>Enter your JavaScript notes here</li>
        </ul>
       </section>
-=======
->>>>>>> d35062690e2cb2fdcddfd9487ef510bf64b916b0
+
     </main>
 
     <footer>
