--- a/prework-study-guide/index.html
+++ b/prework-study-guide/index.html
@@ -11,6 +11,7 @@
     <header id="top">
       <h1>Prework Study Guide</h1>
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
+      <h2>✨ Open the Console to See What's Happening ✨</h2>
     </header>
     <main>
 
@@ -65,5 +66,6 @@
     <footer>
       <p>I can code!</p>
     </footer>
+    <script type="text/javascript" src="./assets/scripts.js"></script>
   </body>
 </html>
