added functions using javascript

--- a/prework-study-guide/index.html
+++ b/prework-study-guide/index.html
@@ -57,7 +57,24 @@
       <section class="card" id="javascript-section">
         <h2>JavaScript</h2>
        <ul>
-            <li>Enter your JavaScript notes here</li>
+        <ul>
+          <li>A variable is a named container that allows us to store data in our code.</li>
+          <li>Control flow is the order in which a computer executes code in a script.</li>
+          <li>Functions are the building blocks of JavaScript. When we create a function, we are defining a block of code that performs a specific task and giving it a unique name. However, just defining a function does not mean it will execute in our code automatically. To execute a function, we must call it in our code.</li>
+          <li>Math.floor and Math.random are both properties of Javascripts built-in Math objects that can be used together to generate a random number</li>
+          <li>To create a function, we use the keyword function followed by a name for the function and parentheses. function nameoffunction ();</li>
+          <li>To call a function, we write: nameoffunction ();</li>
+          <li>To find the length of an array, we write: nameofarray.length</li>
+          <li>The for loop is split into 3 statements: 1) the starting point for the loop 2) the condition 3) what allows the array to iterate over each time </li>
+          <li>Example of a for loop: for (var x=0; x< shapes.length; x++){console.log(shapes[x]);}</li>
+          <li>To create a variable: var nameofvariable = ["first", "second", "third", "fourth"];
+          <li>Arrays are zero-indexed, this means that the first item in the array has an index number of 0</li>
+          <li>If we want to access a specific item in our array: name of variable[itemindexnumber]; </li>
+          <li>To create an if statement: if (condition) { //block of code that will be executed if the condition is truthy}</li>
+          <li>We can have more than one condition by using else if</li>
+          <li>To connect the JavaScript file to the HTML file, write: < script src="./pathtofile/script.js"></ script> just above the </ body> tag in the html file</li>
+          <li>Control flow is the order in which a computer executes code in a script, code runs from the top of the page down to the bottom of the page </li>
+        </ul>
        </ul>
       </section>
 
